# prompt2json

./: .gitignore  GITHUB_UPLOAD_GUIDE.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_usage.py
prompt2json/: __init__.py  cli.py  converter.py
tests/: __init__.py  test_converter.py
