[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt2json"
version = "0.1.0"
description = "A Python library for converting prompts to JSON format"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Nooruddin Noonari", email = "noor.cs2@yahoo.com"}
]
maintainers = [
    {name = "Nooruddin Noonari", email = "noor.cs2@yahoo.com"}
]
keywords = ["prompt", "json", "converter", "ai", "nlp", "text-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/prompt2json"
"Bug Reports" = "https://github.com/yourusername/prompt2json/issues"
"Source" = "https://github.com/yourusername/prompt2json"
"Documentation" = "https://github.com/yourusername/prompt2json#readme"

[project.scripts]
prompt2json = "prompt2json.cli:main"

[tool.setuptools.packages.find]
where = ["."] 
include = ["prompt2json*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true